Fixed safari overflow hidden problem

--- a/src/components/zoomControl/ZoomControl.scss
+++ b/src/components/zoomControl/ZoomControl.scss
@@ -21,25 +21,29 @@ $padding-vertical: 0.5rem;
     border: none;
     background-color: #fff;
     padding: $padding-vertical 00.75rem;
+    margin: 0rem;
   }
 
   button:hover {
     background-color: #ddd;
   }
   button:active {
+    color: #000;
     background-color: #eee;
   }
 
   button.zoom-control__reset {
     font-size: 16px;
-    width: 0rem;
+    // fixing safari overflow:hidden pair with width:0 problem
+    //https://stackoverflow.com/questions/19452034/css-width-0-and-overflow-hidden-issue-in-safari
+    max-width: 0rem;
     padding: 0.25rem 0rem;
     border: none;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    transition-property: width, padding;
+    transition-property: max-width, padding;
     transition-duration: 300ms;
     transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   }
@@ -48,7 +52,7 @@ $padding-vertical: 0.5rem;
     font-size: 16px;
 
     display: block;
-    width: 2.5rem;
+    max-width: 2.5rem;
     height: 100%;
     padding-top: $padding-vertical;
     padding-bottom: $padding-vertical;
@@ -59,7 +63,7 @@ $padding-vertical: 0.5rem;
 
 .zoom-control--mutated {
   button.zoom-control__reset {
-    width: 7rem !important;
-    padding: 0.25rem 0.25rem;
+    max-width: unset !important;
+    padding: 0.25rem 0.5rem;
   }
 }
